--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <h1> Projetos do 2º DS </h1>
-        <h3> Feitos por Pedo Marconatto :-3 </h3>
     </header>
     <main>
         <section class="projetos">
@@ -52,5 +51,8 @@
 
         </section>
     </main>
+    <footer>
+        <h3> Feitos por <a href="https://github.com/Panelin123">Pedo Marconatto :-3 </a></h3>
+    </footer>
 </body>
 </html>
