--- a/index.html
+++ b/index.html
@@ -13,42 +13,41 @@
     <main>
         <section class="projetos">
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Média da Idade</h2>
+                <a href="programa1.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Calculadora de Imc</h2>
+                <a href="programa02.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Sistema de Pontuação</h2>
+                <a href="programa03.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Olimpiadas</h2>
+                <a href="programa05.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Tabuada</h2>
+                <a href="programa07.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Calculadora de Média de Nota</h2>
+                <a href="programa08.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Número Secreto</h2>
+                <a href="programa09.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
-                <a href="#">Link do projeto</a>
+                <h2>Estrelas</h2>
+                <a href="programa10.html">Link do projeto</a>
             </div>
             <div class="cartao">
-                <h2>Titulo do Projeto</h2>
+                <h2>Nome do projeto</h2>
                 <a href="#">Link do projeto</a>
             </div>
-
         </section>
     </main>
     <footer>
