--- a/numerosecreto.html
+++ b/numerosecreto.html
@@ -18,5 +18,29 @@
     <footer>
         <h3> Feitos por <a href="https://github.com/Panelin123">Pedo Marconatto :-3 </a></h3>
     </footer>
+    <script>
+
+        let segredo = [2,5,8];
+        let campoNumero = document.querySelector('input')
+        
+
+        function verifica(){
+                let acertou = false
+
+                for(let i = 0; i < segredo.length; i++){
+                if(segredo[i] == campoNumero.value){
+                alert(`Você acertou :-3`)
+                acertou = true
+                break
+                } 
+                if(!acertou) {
+                alert(`Você errou :-(`)
+                }
+            }
+        }
+
+        let botao = document.querySelector('button')
+        botao.onclick = verifica
+    </script>
 </body>
 </html>
