--- a/numerosecreto.html
+++ b/numerosecreto.html
@@ -37,6 +37,7 @@
             if(!acertou) {
                 alert(`Você errou :-(`)
             }
+            campoNumero.value = ''
         }
 
         let botao = document.querySelector('button')
