--- a/numerosecreto.html
+++ b/numerosecreto.html
@@ -19,8 +19,22 @@
         <h3> Feitos por <a href="https://github.com/Panelin123">Pedo Marconatto :-3 </a></h3>
     </footer>
     <script>
+        function sorteiaNumero(){
+            return Math.round(Math.random()*100)
+        }
 
-        let segredo = [2,5,8];
+        function crialistaNumeros(quantidade){
+            let listaSegredos = []
+            let numero = 1
+            while(numero <= quantidade){
+                listadeSegredos.push(sorteiaNumero())
+                numero++
+            }
+            return listadeSegredos
+        }
+
+        let segredos = crialistaNumeros(5);
+        console.log (segredos)
         let campoNumero = document.querySelector('input')
         
 
