--- a/numerosecreto.html
+++ b/numerosecreto.html
@@ -41,7 +41,7 @@
         function verifica(){
                 let acertou = false
 
-                for(let i = 0; i < segredo.length; i++){
+                for(let i = 0; i < segredos.length; i++){
                 if(segredo[i] == campoNumero.value){
                 alert(`Você acertou :-3`)
                 acertou = true
