--- a/numerosecreto.html
+++ b/numerosecreto.html
@@ -27,9 +27,18 @@
             let listaSegredos = []
             let numero = 1
             while(numero <= quantidade){
-                listadeSegredos.push(sorteiaNumero())
-                numero++
+                numeroAleatorio = sorteiaNumero()
+                let achou = false
+                for(let i=0; i< listaSegredos.leght; i++){
+                    if(listaSegredos{i} == numeroAleatorio){
+                        achou = true
+                        break
+                    }
             }
+                if(achou == false){
+                    ListaSegredos.push(numeroAleatorio)
+                    numero++
+                }
             return listadeSegredos
         }
 
