--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <h2>Estrelas</h2>
                 <a href="programa10.html">Link do projeto</a>
             </div>
-            <div class="cartao">
-                <h2>Nome do projeto</h2>
-                <a href="#">Link do projeto</a>
+            <div class=" cartao ultimo_cartao">
+                <h2>Número Secreto2</h2>
+                <a href="numerosecreto.html">Link do projeto</a>
             </div>
         </section>
     </main>
