--- a/numerosecreto.html
+++ b/numerosecreto.html
@@ -3,68 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>numero secreto</title> 
+    <title>Número Secreto</title> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1> Número Secreto </h1>
-        <p> Você gostaria de adivinhar o número? </p>
+        <h1>Número Secreto</h1>
+        <p>Você gostaria de adivinhar o número?</p>
     </header>
     <main class="principal-numero">
-        <input class="numero-input" type = "text">
-            <button class="principal-numero-botao">Compare o numero secreto</button>
+        <input class="numero-input" type="text">
+        <button class="principal-numero-botao" type="button">Compare o número secreto</button>
     </main>
     <footer>
-        <h3> Feitos por <a href="https://github.com/Panelin123">Pedo Marconatto :-3 </a></h3>
+        <h3>Feitos por <a href="https://github.com/Panelin123">Pedro Marconatto :-3</a></h3>
     </footer>
     <script>
-        function sorteiaNumero(){
-            return Math.round(Math.random()*100)
+        function sorteiaNumero() {
+            return Math.round(Math.random() * 100);
         }
 
-        function crialistaNumeros(quantidade){
-            let listaSegredos = []
-            let numero = 1
-            while(numero <= quantidade){
-                numeroAleatorio = sorteiaNumero()
-                let achou = false
-                for(let i=0; i< listaSegredos.leght; i++){
-                    if(listaSegredos{i} == numeroAleatorio){
-                        achou = true
-                        break
+        function caixa(quantidade) {
+            let listaSegredos = [];
+            let numero = 1;
+            while (numero <= quantidade) {
+                let numeroAleatorio = sorteiaNumero();
+                let achou = false;
+                for (let i = 0; i < listaSegredos.length; i++) {
+                    if (listaSegredos[i] == numeroAleatorio) {
+                        achou = true;
+                        break;
                     }
-            }
-                if(achou == false){
-                    ListaSegredos.push(numeroAleatorio)
-                    numero++
                 }
-            return listadeSegredos
+                if (!achou) {
+                    listaSegredos.push(numeroAleatorio);
+                    numero++;
+                }
+            }
+            return listaSegredos;
         }
 
-        let segredos = crialistaNumeros(5);
-        console.log (segredos)
-        let campoNumero = document.querySelector('input')
+        let segredos = caixa(5);
+        console.log(segredos);
+        let campoNumero = document.querySelector('input');
+        campoNumero.focus();
         
-
-        function verifica(){
-                let acertou = false
-
-                for(let i = 0; i < segredos.length; i++){
-                if(segredo[i] == campoNumero.value){
-                alert(`Você acertou :-3`)
-                acertou = true
-                break
+        function verifica() {
+            let acertou = false;
+            let numeroTentativa = parseInt(campoNumero.value);
+            for (let i = 0; i < segredos.length; i++) {
+                if (segredos[i] === numeroTentativa) {
+                    alert(`Você acertou :-3`);
+                    acertou = true;
+                    break;
                 } 
             }
-            if(!acertou) {
-                alert(`Você errou :-(`)
+            if (!acertou) {
+                alert(`Você errou`);
             }
-            campoNumero.value = ''
+            campoNumero.value = '';
+            campoNumero.focus(); // Foca novamente no campo de input
         }
 
-        let botao = document.querySelector('button')
-        botao.onclick = verifica
+        let botao = document.querySelector('button');
+        botao.onclick = verifica;
     </script>
 </body>
 </html>
